@@ -10,13 +10,15 @@ Package: libibverbs1
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
-Description: A library for direct userspace use of InfiniBand
- libibverbs is a library that allows userspace processes to use
- InfiniBand "verbs" as described in the InfiniBand Architecture
- Specification.  InfiniBand is a high-throughput, low-latency
- networking technology.  InfiniBand host channel adapters (HCAs)
- commonly support direct hardware access from userspace (kernel
- bypass), and libibverbs supports this when available.
+Description: A library for direct userspace use of RDMA (InfiniBand/iWARP)
+ libibverbs is a library that allows userspace processes to use RDMA
+ "verbs" as described in the InfiniBand Architecture Specification and
+ the RDMA Protocol Verbs Specification.  iWARP ethernet NICs support
+ RDMA over hardware-offloaded TCP/IP, while InfiniBand is a
+ high-throughput, low-latency networking technology.  InfiniBand host
+ channel adapters (HCAs) and iWARP NICs commonly support direct
+ hardware access from userspace (kernel bypass), and libibverbs
+ supports this when available.
  .
  For this library to be useful, a device-specific plug-in module
  should also be installed.
@@ -28,12 +30,14 @@ Section: libdevel
 Architecture: any
 Depends: ${misc:Depends}, libibverbs1 (= ${binary:Version})
 Description: Development files for the libibverbs library
- libibverbs is a library that allows userspace processes to use
- InfiniBand "verbs" as described in the InfiniBand Architecture
- Specification.  InfiniBand is a high-throughput, low-latency
- networking technology.  InfiniBand host channel adapters (HCAs)
- commonly support direct hardware access from userspace (kernel
- bypass), and libibverbs supports this when available.
+ libibverbs is a library that allows userspace processes to use RDMA
+ "verbs" as described in the InfiniBand Architecture Specification and
+ the RDMA Protocol Verbs Specification.  iWARP ethernet NICs support
+ RDMA over hardware-offloaded TCP/IP, while InfiniBand is a
+ high-throughput, low-latency networking technology.  InfiniBand host
+ channel adapters (HCAs) and iWARP NICs commonly support direct
+ hardware access from userspace (kernel bypass), and libibverbs
+ supports this when available.
  .
  This package is needed to compile programs against libibverbs1.
  It contains the header files and static libraries (optionally)
@@ -45,12 +49,14 @@ Priority: extra
 Architecture: any
 Depends: ${misc:Depends}, libibverbs1 (= ${binary:Version})
 Description: Debugging symbols for the libibverbs library
- libibverbs is a library that allows userspace processes to use
- InfiniBand "verbs" as described in the InfiniBand Architecture
- Specification.  InfiniBand is a high-throughput, low-latency
- networking technology.  InfiniBand host channel adapters (HCAs)
- commonly support direct hardware access from userspace (kernel
- bypass), and libibverbs supports this when available.
+ libibverbs is a library that allows userspace processes to use RDMA
+ "verbs" as described in the InfiniBand Architecture Specification and
+ the RDMA Protocol Verbs Specification.  iWARP ethernet NICs support
+ RDMA over hardware-offloaded TCP/IP, while InfiniBand is a
+ high-throughput, low-latency networking technology.  InfiniBand host
+ channel adapters (HCAs) and iWARP NICs commonly support direct
+ hardware access from userspace (kernel bypass), and libibverbs
+ supports this when available.
  .
  This package contains the debugging symbols associated with
  libibverbs1. They will automatically be used by gdb for debugging
@@ -61,12 +67,14 @@ Section: net
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Examples for the libibverbs library
- libibverbs is a library that allows userspace processes to use
- InfiniBand "verbs" as described in the InfiniBand Architecture
- Specification.  InfiniBand is a high-throughput, low-latency
- networking technology.  InfiniBand host channel adapters (HCAs)
- commonly support direct hardware access from userspace (kernel
- bypass), and libibverbs supports this when available.
+ libibverbs is a library that allows userspace processes to use RDMA
+ "verbs" as described in the InfiniBand Architecture Specification and
+ the RDMA Protocol Verbs Specification.  iWARP ethernet NICs support
+ RDMA over hardware-offloaded TCP/IP, while InfiniBand is a
+ high-throughput, low-latency networking technology.  InfiniBand host
+ channel adapters (HCAs) and iWARP NICs commonly support direct
+ hardware access from userspace (kernel bypass), and libibverbs
+ supports this when available.
  .
  This package contains useful libibverbs1 example programs such as
  ibv_devinfo, which displays information about InfiniBand devices.
