@@ -13,7 +13,7 @@ ibv_alloc_pd, ibv_dealloc_pd \- allocate or deallocate a protection domain (PDs)
 .fi
 .SH "DESCRIPTION"
 .B ibv_alloc_pd()
-allocates a PD for the InfiniBand device context 
+allocates a PD for the RDMA device context 
 .I context\fR.
 .PP
 .B ibv_dealloc_pd()
@@ -27,8 +27,8 @@ returns a pointer to the allocated PD, or NULL if the request fails.
 returns 0 on success, or the value of errno on failure (which indicates the failure reason).
 .SH "NOTES"
 .B ibv_dealloc_pd()
-may fail if any other InfiniBand resource is still associated with the
-PD being freed.
+may fail if any other resource is still associated with the PD being
+freed.
 .SH "SEE ALSO"
 .BR ibv_reg_mr (3),
 .BR ibv_create_srq (3),
