@@ -8,7 +8,7 @@ ibv_asyncwatch \- display asynchronous events
 
 .SH DESCRIPTION
 .PP
-Display asynchronous events forwarded to userspace for an InfiniBand device.
+Display asynchronous events forwarded to userspace for an RDMA device.
 
 .SH AUTHORS
 .TP
