@@ -21,7 +21,7 @@ address handle (AH) from a work completion
 .B ibv_init_ah_from_wc()
 initializes the address handle (AH) attribute structure
 .I ah_attr
-for the InfiniBand device context
+for the RDMA device context
 .I context
 using the port number
 .I port_num\fR,
