@@ -15,7 +15,7 @@ destroy a completion event channel
 .fi
 .SH "DESCRIPTION"
 .B ibv_create_comp_channel()
-creates a completion event channel for the InfiniBand device context
+creates a completion event channel for the RDMA device context
 .I context\fR.
 .PP
 .B ibv_destroy_comp_channel()
@@ -29,13 +29,14 @@ returns a pointer to the created completion event channel, or NULL if the reques
 returns 0 on success, or the value of errno on failure (which indicates the failure reason).
 .SH "NOTES"
 A "completion channel" is an abstraction introduced by libibverbs that
-does not exist in the InfiniBand Architecture verbs specification.  A
-completion channel is essentially file descriptor that is used to
-deliver completion notifications to a userspace process.  When a
-completion event is generated for a completion queue (CQ), the event
-is delivered via the completion channel attached to that CQ.  This may
-be useful to steer completion events to different threads by using
-multiple completion channels.
+does not exist in the InfiniBand Architecture verbs specification or
+RDMA Protocol Verbs Specification.  A completion channel is
+essentially file descriptor that is used to deliver completion
+notifications to a userspace process.  When a completion event is
+generated for a completion queue (CQ), the event is delivered via the
+completion channel attached to that CQ.  This may be useful to steer
+completion events to different threads by using multiple completion
+channels.
 .PP
 .B ibv_destroy_comp_channel()
 fails if any CQs are still associated with the completion event
