@@ -18,7 +18,7 @@ ibv_create_cq, ibv_destroy_cq \- create or destroy a completion queue (CQ)
 .B ibv_create_cq()
 creates a completion queue (CQ) with at least
 .I cqe
-entries for the InfiniBand device context
+entries for the RDMA device context
 .I context\fR.
 The pointer
 .I cq_context
