@@ -1,14 +1,14 @@
 .TH IBV_DEVICES 1 "August 30, 2005" "libibverbs" "USER COMMANDS"
 
 .SH NAME
-ibv_devices \- list InfiniBand devices
+ibv_devices \- list RDMA devices
 
 .SH SYNOPSIS
 .B ibv_devices
 
 .SH DESCRIPTION
 .PP
-List InfiniBand devices available for use from userspace.
+List RDMA devices available for use from userspace.
 
 .SH SEE ALSO
 .BR ibv_devinfo (1)
