@@ -14,7 +14,7 @@ ibv_get_async_event, ibv_ack_async_event \- get or acknowledge asynchronous even
 .fi
 .SH "DESCRIPTION"
 .B ibv_get_async_event()
-waits for the next async event of the InfiniBand device context
+waits for the next async event of the RDMA device context
 .I context
 and returns it through the pointer
 .I event\fR,
