@@ -2,7 +2,7 @@
 .\"
 .TH IBV_GET_DEVICE_GUID 3 2006-10-31 libibverbs "Libibverbs Programmer's Manual"
 .SH "NAME"
-ibv_get_device_guid \- get an InfiniBand device's GUID
+ibv_get_device_guid \- get an RDMA device's GUID
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/verbs.h>
@@ -11,7 +11,7 @@ ibv_get_device_guid \- get an InfiniBand device's GUID
 .fi
 .SH "DESCRIPTION"
 .B ibv_get_device_name()
-returns the Global Unique IDentifier (GUID) of the InfiniBand device
+returns the Global Unique IDentifier (GUID) of the RDMA device
 .I device\fR.
 .SH "RETURN VALUE"
 .B ibv_get_device_guid()
