@@ -2,7 +2,7 @@
 .\"
 .TH IBV_GET_DEVICE_NAME 3  2006-10-31 libibverbs "Libibverbs Programmer's Manual"
 .SH "NAME"
-ibv_get_device_name \- get an InfiniBand device's name
+ibv_get_device_name \- get an RDMA device's name
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/verbs.h>
@@ -11,7 +11,7 @@ ibv_get_device_name \- get an InfiniBand device's name
 .fi
 .SH "DESCRIPTION"
 .B ibv_get_device_name()
-returns a human-readable name associated with the InfiniBand device
+returns a human-readable name associated with the RDMA device
 .I device\fR.
 .SH "RETURN VALUE"
 .B ibv_get_device_name()
