@@ -2,7 +2,7 @@
 .\"
 .TH IBV_OPEN_DEVICE 3 2006-10-31 libibverbs "Libibverbs Programmer's Manual"
 .SH "NAME"
-ibv_open_device, ibv_close_device \- open and close an InfiniBand device context
+ibv_open_device, ibv_close_device \- open and close an RDMA device context
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/verbs.h>
