@@ -2,7 +2,7 @@
 .\"
 .TH IBV_QUERY_DEVICE 3 2006-10-31 libibverbs "Libibverbs Programmer's Manual"
 .SH "NAME"
-ibv_query_device \- query an InfiniBand device's attributes
+ibv_query_device \- query an RDMA device's attributes
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/verbs.h>
