@@ -2,7 +2,7 @@
 .\"
 .TH IBV_QUERY_PORT 3 2006-10-31 libibverbs "Libibverbs Programmer's Manual"
 .SH "NAME"
-ibv_query_port \- query an InfiniBand port's attributes
+ibv_query_port \- query an RDMA port's attributes
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/verbs.h>
