@@ -4,9 +4,12 @@ libibverbs (1.1.1-2) unstable; urgency=low
   * Use DEB_DH_MAKESHLIBS_ARGS_ALL to pass appropriate -V option to
     dh_makeshlibs, since new symbols were added in libibverbs 1.1.0.
     (Closes: #465435)
-  * Add debian/watch file
+  * Add debian/watch file.
+  * Update control file to talk about generic RDMA and iWARP, not just
+    InfiniBand, since libibverbs works with both IB and iWARP.
+  * Acknowledge NMU (Closes: #442638).
 
- -- Roland Dreier <rolandd@cisco.com>  Wed, 12 Mar 2008 10:39:38 -0700
+ -- Roland Dreier <rolandd@cisco.com>  Wed, 16 Apr 2008 21:35:37 -0700
 
 libibverbs (1.1.1-1) unstable; urgency=low
 
